tests/dataset/tpc-ds/compiler/java/q25.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq252534666081/001/Q25.java:416: error: cannot find symbol
        res5.add(x.ss_net_profit);
                  ^
  symbol:   variable ss_net_profit
  location: variable x of type SsD1D2D3SI
/tmp/TestJavaCompiler_TPCDSQueriesq252534666081/001/Q25.java:422: error: cannot find symbol
        res6.add(x.sr_net_loss);
                  ^
  symbol:   variable sr_net_loss
  location: variable x of type SsD1D2D3SI
/tmp/TestJavaCompiler_TPCDSQueriesq252534666081/001/Q25.java:428: error: cannot find symbol
        res7.add(x.cs_net_profit);
                  ^
  symbol:   variable cs_net_profit
  location: variable x of type SsD1D2D3SI
/tmp/TestJavaCompiler_TPCDSQueriesq252534666081/001/Q25.java:436: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new IItemIdIItemDescSStoreIdSStoreNameStoreSalesProfitStoreReturnsLossCatalogSalesProfit("ITEM1", "Desc1", "S1", "Store1", 50.000000, 10.000000, 30.000000), new IItemIdIItemDescSStoreIdSStoreNameStoreSalesProfitStoreReturnsLossCatalogSalesProfit("ITEM2", "Desc2", "S1", "Store1", 20.000000, 5.000000, 15.000000))))) throw new AssertionError("expect failed");
                                                                                                                                                                          ^
/tmp/TestJavaCompiler_TPCDSQueriesq252534666081/001/Q25.java:436: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new IItemIdIItemDescSStoreIdSStoreNameStoreSalesProfitStoreReturnsLossCatalogSalesProfit("ITEM1", "Desc1", "S1", "Store1", 50.000000, 10.000000, 30.000000), new IItemIdIItemDescSStoreIdSStoreNameStoreSalesProfitStoreReturnsLossCatalogSalesProfit("ITEM2", "Desc2", "S1", "Store1", 20.000000, 5.000000, 15.000000))))) throw new AssertionError("expect failed");
                                                                                                                                                                                                                                                                                                                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
